Adicionados arquivos base para autoload (require)

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
     "autoload": {
         "psr-4": {
             "Petshop\\": "src/"
-        }
+        },
+        "files": [
+            "config/constants.php",
+            "config/parameters.php"
+        ]
     },
     "authors": [
         {
