--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     ],
     "require": {
         "bramus/router": "^1.6",
-        "respect/validation": "^2.2"
+        "respect/validation": "^2.2",
+        "phpmailer/phpmailer": "^6.6"
     }
 }
